--- a/ScrollView/Base.lproj/Main.storyboard
+++ b/ScrollView/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Scroll View-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ScrollView" customModule="ScrollView" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,42 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nad-sk-TWz">
+                                <rect key="frame" x="0.0" y="20" width="375" height="547"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="omS-yN-nE3"/>
+                                </connections>
+                            </scrollView>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="1" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="B7I-DB-5WY">
+                                <rect key="frame" x="81" y="601" width="213" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="209" id="Toe-78-nP5"/>
+                                    <constraint firstAttribute="height" constant="30" id="qHd-hb-Oda"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="sliderForZoom:" destination="BYZ-38-t0r" eventType="valueChanged" id="c0M-JO-VVp"/>
+                                </connections>
+                            </slider>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="B7I-DB-5WY" firstAttribute="centerX" secondItem="nad-sk-TWz" secondAttribute="centerX" id="1Oy-iq-MGO"/>
+                            <constraint firstItem="nad-sk-TWz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ul3-Ha-7sy"/>
+                            <constraint firstItem="nad-sk-TWz" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="V4R-lK-jgl"/>
+                            <constraint firstItem="nad-sk-TWz" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="eXA-gH-une"/>
+                            <constraint firstItem="B7I-DB-5WY" firstAttribute="top" secondItem="nad-sk-TWz" secondAttribute="bottom" constant="34" id="nPI-w9-Ch6"/>
+                            <constraint firstAttribute="trailing" secondItem="nad-sk-TWz" secondAttribute="trailing" id="zBx-LW-3Ml"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="nad-sk-TWz" secondAttribute="bottom" constant="100" id="zE3-pt-lW7"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="ScrollView" destination="nad-sk-TWz" id="1tS-pI-B35"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-991" y="-360"/>
         </scene>
     </scenes>
 </document>
